--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Anniversary my beautiful Chloe</title>
-    <title>Can i expect to celebrate with you again next year :3</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
     <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
 </head>
@@ -12,7 +11,7 @@
     <div id="container">
         <div id="image-container"></div> <!-- Container for displaying images -->
         <div id="text-container">
-            <div id="question">Will you be my valentine?</div> <!-- Question -->
+            <div id="question">Can i expect to celebrate with you again next year :3</div> <!-- Question -->
             <div id="options">
                 <button id="yes-button" onclick="selectOption('yes')">Yes</button> <!-- Yes button -->
                 <button id="no-button" onclick="selectOption('no')">No</button> <!-- No button -->
