--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="text-container">
             <div id="question">Happy Anniversary my beautiful Chloe!</div> <!-- Question -->
             <div id="options">
-                <button id="yes-button" onclick="selectOption('yes')">Yes</button> <!-- Yes button -->
-                <button id="no-button" onclick="selectOption('no')">No</button> <!-- No button -->
+                <button id="yes-button" onclick="selectOption('yes')">YAY</button> <!-- Yes button -->
+                <button id="no-button" onclick="selectOption('no')">eww</button> <!-- No button -->
             </div>
         </div>
     </div>
